--- a/miproyecto1/src/main/resources/application.properties
+++ b/miproyecto1/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 server.port=8086
 
 #DDL configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=drop-and-create
