--- a/miproyecto1/src/main/resources/application.properties
+++ b/miproyecto1/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#MongoDB connection
+#spring.data.mongodb.uri=mongodb+srv://<USERNAME>:<PASSWORD>@<ClUSTER-NAME>-<INSTANCE-ID>/<DATABASE-NAME>?retryWrites=true
+
+spring.data.mongodb.uri=mongodb+srv://java:1234@cluster0.8n1or.mongodb.net/clientesDB?retryWrites=true
 
 #JPA
 #example1 Cliente and clienteControlller
